Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Admin message
The migration is almost done, at least the rest should happen in the background. There are still a few technical difference between the old cluster and the new ones, and they are summarized in this issue. Please pay attention to the TL:DR at the end of the comment.
The AMDGPU driver now internally converts AMDGPU_INFO_SENSOR_GPU_AVG_POWER to AMDGPU_PP_SENSOR_GPU_AVG_POWER.
However, AMDGPU_PP_SENSOR_GPU_AVG_POWER is not supported on some GPUs/APUs (SMU7, Vega10, Vega12, SMU12 [Renoir], Yellow Carp, SMU13.0.{5,6}).
Those AMD GPUs support only AMDGPU_PP_SENSOR_GPU_INPUT_POWER.
This should be expected behavior now. The values being returned previously were wrong for average power.
Those products can only return instantaneous power.
So, are there any plans to add something like AMDGPU_INFO_SENSOR_GPU_INPUT_POWER to libdrm and support it in the AMDGPU driver?
Currently, applications have no way to get SMU7, Vega10, and Vega12 power consumption information from libdrm .
Umio Yasunochanged title from AMDGPU_PP_SENSOR_GPU_AVG_POWER is not supported in SMU7, Vega10, Vega12 to AMDGPU_PP_SENSOR_GPU_AVG_POWER is not supported in some GPUs/APUs
changed title from AMDGPU_PP_SENSOR_GPU_AVG_POWER is not supported in SMU7, Vega10, Vega12 to AMDGPU_PP_SENSOR_GPU_AVG_POWER is not supported in some GPUs/APUs
Umio Yasunochanged title from AMDGPU_PP_SENSOR_GPU_AVG_POWER is not supported in some GPUs/APUs to AMDGPU_PP_SENSOR_GPU_AVG_POWER is not supported on some GPUs/APUs
changed title from AMDGPU_PP_SENSOR_GPU_AVG_POWER is not supported in some GPUs/APUs to AMDGPU_PP_SENSOR_GPU_AVG_POWER is not supported on some GPUs/APUs
Are there any blocks to getting the fix patches merged and backported to stable kernels? Changes to kernel APIs breaking userspace apps is Not A Good Thing, and in this case is affecting real-world users.
If there's anything I can do to help speed this along, please let me know ASAP.