Read AMD GPU power sensor data from sysfs

Linux 6.6 introduce a regression on the ioctl AMDGPU_INFO_SENSOR_GPU_AVG_POWER
sensor that breaks backwards compatibility with userspace on GPUs that don't
support average data but current instantaneous data [1].

Power data can also be fetched from the sysfs hwmon power1_average and
power1_input files. Use power1_average as primary data source, fallback to
power1_input on GPUs that don't support average data and leave the ioctl data
source as the last resort option.

[1] https://gitlab.freedesktop.org/drm/amd/-/issues/2897

Fixes #398.